internal/controller/test_data/wms/custom-mapfile/expected/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: "false"
    service-type: wms
    service-version: v1_0
  name: custom-mapfile-wms-mapserver
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WMS
      name: custom-mapfile
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      pdok.nl/app: mapserver
      dataset: dataset
      dataset-owner: datasetOwner
      pdok.nl/inspire: "false"
      service-type: wms
      service-version: v1_0
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: 'true'
        kubectl.kubernetes.io/default-container: mapserver
        match-regex.version-checker.io/mapserver: ^\d\.\d\.\d.*$
        prometheus.io/port: "9117"
        prometheus.io/scrape: "true"
        priority.version-checker.io/mapserver: "4"
        priority.version-checker.io/ogc-webservice-proxy: "4"
      labels:
        pdok.nl/app: mapserver
        dataset: dataset
        dataset-owner: datasetOwner
        pdok.nl/inspire: "false"
        service-type: wms
        service-version: v1_0
    spec:
      restartPolicy: Always
      dnsPolicy: ClusterFirst
      containers:
        - env:
            - name: AZURE_STORAGE_CONNECTION_STRING
              valueFrom:
                secretKeyRef:
                  key: AZURE_STORAGE_CONNECTION_STRING
                  name: blobs-testtest
            - name: SERVICE_TYPE
              value: WMS
            - name: MAPSERVER_CONFIG_FILE
              value: "/srv/mapserver/config/default_mapserver.conf"
            - name: MS_MAPFILE
              value: /srv/data/config/mapfile/mapfile.map
          image: test.test/image:test3
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - sleep
                  - "15"
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "wget -SO- -T 10 -t 2
                  'http://127.0.0.1:80/mapserver?SERVICE=WMS&request=GetCapabil\
                  ities' 2>&1 | egrep -aiA10 'HTTP/1.1 200' | egrep -i
                  'Content-Type: text/xml'"
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
          name: mapserver
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "wget -SO- -T 10 -t 2
                  'http://127.0.0.1:80/mapserver?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetMap&BBOX=190061.4619730016857,462435.5987861062749,202917.7508707302331,473761.6884966178914&CRS=EPSG:28992&WIDTH=100&HEIGHT=100&LAYERS=layer-name&STYLES=&FORMAT=image/png'
                  2>&1 | egrep -aiA10 'HTTP/1.1 200' | egrep -i
                  'Content-Type: image/png'"
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
          resources:
            limits:
              ephemeral-storage: 200M
              memory: 800M
            requests:
              cpu: "0.1"
          startupProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - "wget -SO- -T 10 -t 2
                  'http://127.0.0.1:80/mapserver?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetMap&BBOX=190061.4619730016857,462435.5987861062749,202917.7508707302331,473761.6884966178914&CRS=EPSG:28992&WIDTH=100&HEIGHT=100&LAYERS=layer-name,group,group-child&STYLES=&FORMAT=image/png'
                  2>&1 | egrep -aiA10 'HTTP/1.1 200' | egrep -i
                  'Content-Type: image/png'"
            successThreshold: 1
            failureThreshold: 3
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 10
          volumeMounts:
            - mountPath: /srv/data
              name: base
              readOnly: false
            - mountPath: /var/www
              name: data
              readOnly: false
            - mountPath: /srv/mapserver/config/include.conf
              name: mapserver
              subPath: include.conf
            - mountPath: /srv/mapserver/config/ogc.lua
              name: mapserver
              subPath: ogc.lua
            - name: mapserver
              mountPath: /srv/mapserver/config/default_mapserver.conf
              subPath: default_mapserver.conf
            - mountPath: /srv/mapserver/config/scraping-error.xml
              name: mapserver
              subPath: scraping-error.xml
            - name: mapfile
              mountPath: /srv/data/config/mapfile
            - mountPath: /srv/data/config/styles
              name: styling-files
        - args:
            - --scrape_uri=http://localhost/server-status?auto
          image: test.test/image:test7
          imagePullPolicy: IfNotPresent
          name: apache-exporter
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 9117
              protocol: TCP
          resources:
            limits:
              memory: 48M
            requests:
              cpu: "0.02"
        - name: ogc-webservice-proxy
          image: test.test/image:test6
          imagePullPolicy: IfNotPresent
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            limits:
              memory: 200M
            requests:
              cpu: "0.05"
          command:
            - /ogc-webservice-proxy
            - -h=http://127.0.0.1/
            - -t=wms
            - -s=/input/service-config.yaml
            - -v
            - -d=15
          ports:
            - containerPort: 9111
          volumeMounts:
            - name: ogc-webservice-proxy-config
              mountPath: /input
              readOnly: true
      initContainers:
        - args:
            - |
              set -e;
              mkdir -p /srv/data/config/;
              rclone config create --non-interactive --obscure blobs azureblob endpoint $BLOBS_ENDPOINT account $BLOBS_ACCOUNT key $BLOBS_KEY use_emulator true;
              bash /srv/scripts/gpkg_download.sh;
          command:
            - /bin/sh
            - -c
          env:
            - name: GEOPACKAGE_TARGET_PATH
              value: /srv/data/gpkg
            - name: GEOPACKAGE_DOWNLOAD_LIST
              value: ${BLOBS_GEOPACKAGES_BUCKET}/key/file.gpkg
          envFrom:
            - configMapRef:
                name: blobs-testtest
            - secretRef:
                name: blobs-testtest
          image: test.test/image:test1
          imagePullPolicy: IfNotPresent
          name: blob-download
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          resources:
            requests:
              cpu: '0.15'
            limits:
              cpu: '0.2'
          volumeMounts:
            - mountPath: /srv/data
              name: base
              readOnly: false
            - name: data
              mountPath: /var/www
              readOnly: false
            - mountPath: /srv/scripts
              name: init-scripts
              readOnly: true
        - env:
            - name: SERVICECONFIG
              value: /input/input.yaml
          image: test.test/image:test4
          imagePullPolicy: IfNotPresent
          name: capabilities-generator
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /var/www
              name: data
              readOnly: false
            - mountPath: /input
              name: capabilities-generator-config
              readOnly: true
        - args:
            - --input-path
            - /input/input.json
            - --dest-folder
            - /srv/data/config/templates
            - --file-name
            - feature-info
          command:
            - featureinfo-generator
          image: test.test/image:test5
          imagePullPolicy: IfNotPresent
          name: featureinfo-generator
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /srv/data
              name: base
              readOnly: false
            - mountPath: /input
              name: featureinfo-generator-config
              readOnly: true
        - command:
            - bash
            - -c
            - |
              set -eu;
              exit_code=0;
              cat /input/input | xargs -n 2 echo | while read layer style; do
              echo Generating legend for layer: $layer, style: $style;
              mkdir -p /var/www/legend/$layer;
              mapserv -nh 'QUERY_STRING=SERVICE=WMS&language=dut&version=1.3.0&service=WMS&request=GetLegendGraphic&sld_version=1.1.0&layer='$layer'&format=image/png&STYLE='$style'' > /var/www/legend/$layer/${style}.png;
              magic_bytes=$(head -c 4 /var/www/legend/$layer/${style}.png | tail -c 3);
              if [[ $magic_bytes != 'PNG' ]]; then
              echo [4T2O9] file /var/www/legend/$layer/${style}.png appears to not be a png file;
              exit_code=1;
              fi;
              done;
              exit $exit_code;
          env:
            - name: MAPSERVER_CONFIG_FILE
              value: "/srv/mapserver/config/default_mapserver.conf"
            - name: MS_MAPFILE
              value: /srv/data/config/mapfile/mapfile.map
          image: test.test/image:test3
          imagePullPolicy: IfNotPresent
          name: legend-generator
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /srv/data
              name: base
              readOnly: false
            - mountPath: /var/www
              name: data
              readOnly: false
            - mountPath: /srv/mapserver/config/default_mapserver.conf
              name: mapserver
              subPath: default_mapserver.conf
            - name: mapfile
              mountPath: /srv/data/config/mapfile
            - mountPath: /input
              name: legend-generator-config
              readOnly: true
            - mountPath: /srv/data/config/styles
              name: styling-files
      terminationGracePeriodSeconds: 60
      volumes:
        - emptyDir: {}
          name: base
        - emptyDir: {}
          name: data
        - configMap:
            name: custom-mapfile-wms-mapserver-df94mb2d76
            defaultMode: 420
          name: mapserver
        - configMap:
            name: configMap
            defaultMode: 420
          name: mapfile
        - configMap:
            name: custom-mapfile-wms-ogc-webservice-proxy-22tb5878f7
            defaultMode: 420
          name: ogc-webservice-proxy-config
        - configMap:
            defaultMode: 511
            name: custom-mapfile-wms-init-scripts-f8k8ffgmgh
          name: init-scripts
        - configMap:
            name: custom-mapfile-wms-capabilities-generator-865bt77thd
            defaultMode: 420
          name: capabilities-generator-config
        - projected:
            sources: []
            defaultMode: 420
          name: styling-files
        - configMap:
            name: custom-mapfile-wms-featureinfo-generator-668mmh48cc
            defaultMode: 420
          name: featureinfo-generator-config
        - configMap:
            name: custom-mapfile-wms-legend-generator-82hh8mg962
            defaultMode: 420
          name: legend-generator-config
