internal/controller/test_data/wms/custom-mapfile/expected/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    inspire: "false"
    service-type: wms
    service-version: v1_0
  name: custom-mapfile-wms-mapserver
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WMS
      name: custom-mapfile
      uid: ""
      blockOwnerDeletion: true
      controller: true
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  sessionAffinity: None
  ports:
    - name: mapserver
      port: 80
      targetPort: 80
      protocol: TCP
    - name: ogc-webservice-proxy
      port: 9111
    - name: metric
      port: 9117
      targetPort: 9117
      protocol: TCP
  selector:
    app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    inspire: "false"
    service-type: wms
    service-version: v1_0
